--- a/bibliography.bib
+++ b/bibliography.bib
@@ -551,7 +551,18 @@
 	numpages	= {41},
 	publisher	= {ACM},
 	address		= {New York, NY, USA},
-	doi		= {10.1145/66093.66095},
+	doi			= {10.1145/66093.66095},
+	language	= {English},
+}
+
+@techreport{ISO:7498-2:1989,
+	institution	= {ISO/IEC JTC 1 Information technology},
+	title		= {ISO 7498-2:1989. Information processing systems — Open Systems Interconnection — Basic Reference Model — Part 2: Security Architecture},
+	type		= {Standard},
+	year		= {1989},
+	month		= {2},
+	url			= {https://www.iso.org/standard/15841.html},
+	numpages	= {32},
 	language	= {English},
 }
 
