--- a/protocols-symmetric.tex
+++ b/protocols-symmetric.tex
@@ -14,8 +14,8 @@
 	\item $K$ -- секретный сеансовый ключ, получение которого и является одной из целью протоколов.
 \end{itemize}
 
-\input{wide-mouth_frog}
+\input{protocols-wide-mouth_frog}
 
-\input{needham-schroeder_protocol}
+\input{protocols-needham-schroeder}
 
-\input{key_distribution-kerberos}
+\input{protocols-kerberos}
