--- a/protocols-wide-mouth_frog.tex
+++ b/protocols-wide-mouth_frog.tex
@@ -36,7 +36,7 @@
 	\item $ Eva \rightarrow \{ A, E_A \left( T'_T, B, K \right) \} \rightarrow Trent $
 	\item $ Trent \rightarrow \{ E_B \left( T''_T, A, K \right) \} \rightarrow Bob $
 	\item Повторять шаги 3 и 5, пока не пройдёт время, нужное для получения $K$.
-\end{enumerate}}
+\end{enumerate}
 
 С точки зрения доверенного центра, шаги 1, 3 и 5 являются корректными пакетами, инициирующими общение абонентов между собой. Метки времени в них корректны (если Ева будет успевать вовремя эти пакеты посылать). С точки зрения легальных абонентов каждый из пакетов является приглашением другого абонента начать общение. В результате произойдёт две вещи:
 
