add protocol secure properties

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -993,6 +993,14 @@
 	language	= {English},
 }
 
+@misc{AVISPA:2003,
+	year		= {2003},
+	title		= {Automated Validation of Internet Security Protocols and Applications (AVISPA)},
+	subtitle	= {IST-2001-39252. Deliverable 6.1 'List of Selected Problems'. Properties (Goals).},
+	language	= {English},
+	url			= {http://www.avispa-project.org/delivs/6.1/d6-1/node3.html},
+}
+
 @misc{MS-VBRAND:2004,
 	year		= {2004},
 	title		= {INFO: How Visual Basic Generates Pseudo-Random Numbers for the RND Function},
@@ -1086,6 +1094,18 @@
 	title		= {Об информации, информатизации и защите информации: Фед. закон РФ от 27.07.2006 № 149-ФЗ},
 	booktitle	= {Собрание законодательства РФ. №31 (ч. 1). Ст. 3448},
 	language	= {Russian},
+}
+
+@article{Cheremushkin:2009,
+	author		= {Черёмушкин, Александр Васильевич},
+	journal		= {Прикладная дискретная математика},
+	language	= {rus},
+	pages		= {115-150},
+	title		= {Криптографические протоколы: основные свойства и уязвимости},
+	url         = {https://cyberleninka.ru/article/n/kriptograficheskie-protokoly-osnovnye-svoystva-i-uyazvimosti.pdf},
+	issue		= {2},
+	year		= {2009},
+	month		= {11},
 }
 
 @misc{jdbc:2006,
