--- a/protocols.tex
+++ b/protocols.tex
@@ -5,7 +5,7 @@
 
 Для успешного выполнения любых целей по защите информации необходимо участие в процессе защиты нескольких субъектов, которые по определённым правилам будут выполнять технические или организационные действия, криптографические операции, взаимодействовать друг с другом, например, передавая сообщения или проверяя личности друг друга.
 
-Формализация подобных действий делается через описание протокола. \emph{Протокол} -- описание распределённого алгоритма, в процессе выполнения которого два или более участников последовательно выполняют определённые действия и обмениваются сообщениями.
+Формализация подобных действий делается через описание протокола. \emph{Протокол} -- описание распределённого алгоритма, в процессе выполнения которого два или более участников последовательно выполняют определённые действия и обмениваются сообщениями\footnote{Здесь и далее в этом разделе определения даны на основе~\cite{Cheremushkin:2009}.}.
 
 Под участником\index{участник!протокола} (субъектом\index{субъект!протокола}, стороной\index{сторона!протокола}) протокола понимают не только людей, но и приложения, группы людей или целые организации. Формально участниками считают только тех, кто выполняет активную роль в рамках протокола. Хотя при создании и описании протоколов забывать про пассивные стороны тоже не стоит. Например, пассивный криптоаналитик\index{криптоаналитик!пассивный} формально не является участником протоколов, но многие протоколы разрабатываются с учётом защиты от таких <<неучастников>>.
 
@@ -133,14 +133,151 @@
 
 \begin{itemize}
 	\item $M$ (от \langen{message}) -- сообщение в исходном виде, открытый текст вне зависимости от кодировки. То есть под $M$ может пониматься и исходный текст в виде текста или, например, звука, либо уже некоторое число или массив бит, однозначно соответствующие этому сообщению.
-	\item $K$ (от \langen{key}) -- некоторый ключ. Без дополнительный уточнений обычно обозначает секретный сеансовый ключ.
+	\item $K$ (от \langen{key}) -- некоторый ключ. Без дополнительных уточнений обычно обозначает секретный сеансовый ключ.
 	\item $K_A$ -- общий секретный ключ между Алисой и Трентом (для симметричных криптосистем).
 	\item $K_A$ -- открытый ключ Алисы (для асимметричных криптосистем).
-	\item $E_K( \dots )$ (от \langen{encrypt}) -- данные, зашифрованные на ключе $K$.
-	\item $S_K( \dots )$ (от \langen{sign}) -- данные \emph{и} соответствующая цифровая подпись на открытом ключе $K$.
+	\item $E_K \left( \dots \right)$ (от \langen{encrypt}) -- данные, зашифрованные на ключе $K$.
+	\item $S_K \left( \dots \right)$ (от \langen{sign}) -- данные \emph{и} соответствующая цифровая подпись на открытом ключе $K$.
 	\item $T_A$, $T_B$ (от \langen{timestamp}) -- метки времени от соответствующих участников.
 	\item $R_A$, $R_B$ (от \langen{random}) -- случайные числа, выбранные соответствующими участниками.
 \end{itemize}
+
+\section{Свойства безопасности протоколов}
+Защищённая система и, соответственно, защищённый протокол могут выполнять разные функции безопасности. Многие из этих функций или целей (\langen{{goals}}) можно сформулировать как устойчивость к определённому классу атак. Наиболее полным и актуальным считается перечисление и толкование этих целей в документе проекта AVISPA (\langen{Automated Validation of Internet Security Protocols and Applications})~\cite{AVISPA:2003}, суммирующим описания из различных документов IETF (\langen{{Internet Engineering Task Force}}). Данные цели принято считать \emph{формализируемыми} -- то есть такими, что для отдельных протоколов есть возможность формально доказать или опровергнуть достижение этих целей.
+
+\begin{itemize}
+	\item Аутентификация (однонаправленная).\\*
+		\langen{Authentication (unicast)}.
+	\begin{itemize}
+		\item[(G1)] Аутентификация субъекта.\\*
+			\langen{Entity authentication (Peer Entity Authentication)}.
+		\item[{}] Гарантия для одной стороны протокола через представление доказательств и / или учётных данных второй стороны, участвующей в протоколе, и того, что вторая сторона действительно участвовала в текущем сеанса протокола. Обычно делается через представления таких данных, которые могли быть сгенерированы только второй стороной. Аутентификация субъекта подразумевает, что полученные данные могут быть однозначно прослежены до субъекта протокола, что подразумевает аутентификацию источника данных.
+		\item[(G2)] Аутентификация сообщения.\\*
+			\langen{Message authentication (Data Origin Authentication)}.
+		\item[{}] Гарантия того, что полученное сообщение или фрагмент данных были созданы определённым субъектом в какое-то (обычно неуказанное) время в прошлом, и что эти данные не были повреждены или подделаны. Но без предоставления уникальности или своевременности. Аутентификация сообщений подразумевает их целостность.
+		\item[(G3)] Защита от повтора.\\*
+			\langen{Replay Protection}.
+		\item[{}] Защита от ситуации, когда некоторая сторона запишет некоторое сообщение и воспроизведёт его позднее (возможно -- в другом сеансе протокола), что приведёт к некорректной интерпретации данной стороны как аутентифицированной.
+	\end{itemize}
+
+	\item Аутентификация при рассылке по многим адресам или при подключении к службе подписки/уведомления.\\*
+		\langen{Authentication in Multicast or via a Subscribe / Notify Service}.
+	\begin{itemize}
+		\item[(G4)] Явная аутентификация получателя.\\*
+			\langen{Implicit Destination Authentication}.
+		\item[{}] Протокол должен гарантировать, что отправленное сообщение доступно для чтения только легальным получателям. То есть только легальные авторизованные участники будут иметь доступ к актуальной информации, многоадресному сообщению или сеансу групповой связи. Включает в себя группы рассылки с очень динамичным членством.
+		\item[(G5)] Аутентификация источника.\\*
+			\langen{Source Authentication}.
+		\item[{}] Легальные получатели смогут аутентифицировать источник и содержание информации или группового общения. Включает случаи, когда члены группы не доверяют друг другу.
+	\end{itemize}
+
+	\item[(G6)] Авторизация (третьей доверенной стороной).\\*
+		\langen{Authorization (by a Trusted Third Party)}.
+	\item[{}] Гарантия возможности авторизовать (в терминах протокола) одного субъекта на доступ к ресурсу другого с помощью третьей доверенной стороны. Подразумевает, что владелец ресурса может не иметь собственных списков доступа (\langen{Access Control List, ACL})) и полагается на таковые у доверенной стороны.
+
+	\item Совместная генерация ключа.\\*
+		\langen{Key Agreement Properties}.
+	\begin{itemize}
+		\item[(G7)] Аутентификация ключа.\\*
+			\langen{Key authentication}.
+		\item[{}] Гарантия для одного из субъектов, что только легальные пользователи могут получить доступ к конкретному секретному ключу.
+		\item[(G8)] Подтверждение владения ключом.\\*
+			\langen{Key confirmation (Key Proof of Possession)}.
+		\item[{}] Гарантия для одного из субъектов, что другой субъект действительно владеет конкретным секретным ключом (либо информацией, необходимой для получения такого ключа).
+		\item[(G9)] Совершенная прямая секретность.\\*
+			\langen{Perfect Forward Secrecy (PFS)}.
+		\item[{}] Гарантия того, что компрометация мастер-ключей в будущем не приведёт к компрометации сессионных ключей уже прошедших сеансов протокола.
+		\item[(G10)] Формирование новых ключей.\\*
+			\langen{Fresh Key Derivation}.
+		\item[{}] Гарантия возможности создать новые сессионные ключи для каждого сеанса протокола. 
+		\item[(G11)] Защищённая возможность договориться о параметрах безопасности.\\*
+			\langen{Secure capabilities negotiation (Resistance against Downgrading and Negotiation Attacks)}.
+		\item[{}] Гарантия не только того, что легальные стороны имеют возможность договориться о параметрах безопасности, но и того, что нелегальная сторона не вмешалась в протокол и не привела к выбору предпочтительных ей (возможно -- наиболее слабых) параметров безопасности.
+	\end{itemize}
+
+	\item[(G12)] Конфиденциальность (секретность).\\*
+		\langen{Confidentiality (Secrecy)}.
+	\item[{}] Гарантия, что конкретный элемент данных (часть передаваемого сообщения) остаётся неизвестным для злоумышленника. В данной цели не рассматривается секретность сеансового ключа, проверка подлинности ключа или надёжность долговременных мастер-ключей.
+
+	\item Анонимность.\\*
+		\langen{Anonymity}.
+	\begin{itemize}
+		\item[(G13)] Аутентификация ключа.\\*
+			\langen{Identity Protection against Eavesdroppers}.
+		\item[{}] Гарантия, что злоумышленник (подслушивающий) не состоянии связать обмен сообщениями субъектом с его реальной личностью.
+		\item[(G14)] Подтверждение владения ключом.\\*
+			\langen{Identity Protection against Peer}.
+		\item[{}] Гарантия, что участник переписки не в состоянии связать обмен сообщениями субъекта с реальной личностью, но только с некоторым псевдонимом.
+	\end{itemize}
+
+	\item[(G15)] Ограниченная защита от атак отказа в обслуживании.\\*
+		\langen{(Limited) Denial-of-Service (DoS) Resistance}.
+	\item[{}] Гарантия, что протокол следует определённым принципам, уменьшающих вероятность (усложняющих использование) отдельных классов атак отказа в обслуживании.
+
+	\item[(G16)] Неизменность отправителя.\\*
+		\langen{Sender Invariance}.
+	\item[{}] Гарантия для одной из сторон, что источник сообщения остался таким же, как тот, который начал общение, хотя фактическая идентификация источника не важна для получателя.
+
+	\item Неотрекаемость.\\*
+		\langen{Non-repudiation}.
+	\begin{itemize}
+		\item[(G17)] Подотчётность.\\*
+			\langen{Accountability}.
+		\item[{}] Гарантия возможности отслеживания действий субъектов над объектами.
+		\item[(G18)] Доказательство происхождения.\\*
+			\langen{Proof of Origin}.
+		\item[{}] Гарантия неопровержимости доказательств источника сообщения.
+		\item[(G19)] Доказательство доставки.\\*
+			\langen{Proof of Delivery}.
+		\item[{}] Гарантия неопровержимости доказательств факта получения сообщения.
+	\end{itemize}
+
+	\item[(G20)] Защищённое временное свойство.\\*
+		\langen{Safety Temporal Property}.
+	\item[{}] Гарантия возможности доказать, что факт нахождения системы в одном из состояний означает, что некогда в прошлом система хотя бы раз находилась в некотором другом состоянии. Например, что получение субъектом доступа к ресурсу означает, что некогда в прошлом субъект успешно оплатил данный доступ.
+
+\end{itemize}
+
+Примеры свойств безопасности, реализуемыми различными протоколами приведены в таблице~\ref{tab:protocols-properties}).
+
+\begin{landscape}
+{\renewcommand{\arraystretch}{1.5}
+\begin{table}
+    \centering
+    \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+        \hline
+Протокол \textbackslash Цель G & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 \\
+        \hline
+        EAP-IKEv2              & × & × & × &   &   & × & × &   &   &  × &    &    &    &    &  × \\
+        \hline
+        EKE                    & × & × &   &   &   &   &   &   &   &    &    &  × &    &    &    \\
+        \hline
+        IKE                    & × & × & × &   &   &   & × &   & × &  × &  × &    &  × &  × &  × \\
+        \hline
+        IKEv2                  & × & × & × &   &   &   & × &   & × &  × &  × &    &    &    &  × \\
+        \hline
+        DHCP-IPSec-tunnel      & × & × &   &   &   &   &   &   &   &    &    &  × &    &    &    \\
+        \hline
+        kerberos               & × & × & × &   &   & × & × &   &   &  × &    &    &    &    &    \\
+        \hline
+        SSH                    & × & × & × &   &   &   & × &   &   &  × &  × &    &    &    &    \\
+        \hline
+        TLS                    & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        \hline
+        TLS-v1.1               & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        \hline
+        TLS-SRP                & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        \hline
+        TLS-sharedkeys         & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        \hline
+        SET                    & × & × & × &   &   &   &   &   &   &    &    &    &  × &    &    \\
+        \hline
+    \end{tabular}
+    \caption{Примеры свойств безопасности протоколов~\cite{Cheremushkin:2009}.}
+    \label{tab:protocols-properties}
+\end{table}
+}
+\end{landscape}
 
 \section{Протоколы распространения ключей}
 
