--- a/protocols.tex
+++ b/protocols.tex
@@ -9,6 +9,8 @@
 
 \input{protocols-classification}
 
+\input{protocols-attacks}
+
 \section{Протоколы распространения ключей}
 
 Задача распространения ключей является одной из множества задач построения надёжной сети общения многих абонентов. Задача состоит в получении в нужный момент времени двумя легальными абонентами сети секретного сессионного ключа шифрования (и аутентификации сообщений). Хорошим решением данной задачи будем считать такой протокол распространения ключей, который удовлетворяет следующим условиям.
