--- a/protocols-wide-mouth_frog.tex
+++ b/protocols-wide-mouth_frog.tex
@@ -1,4 +1,4 @@
-\subsection{Протокол Wide-Mouth Frog}\index{протокол!Wide-Mouth Frog|(}
+\subsection{Протокол Wide-Mouth Frog}\index{протокол!Wide-Mouth Frog|(}\label{section-protocols-wide-moth-frog}
 Протокол Wide-Mouth Frog является, возможно, самым простым протоколом с доверенным центром. Его автором считается Майкл Бэрроуз (1989 год, \langen{Michael Burrows},  \cite{Burrows:Abadi:Needham:1990}). Протокол состоит из следующих шагов.
 
 \begin{figure}[!htb]
