Fix mistyped protocol properties

--- a/protocols-classification.tex
+++ b/protocols-classification.tex
@@ -31,7 +31,7 @@
         \item[(G1)] обеспечивает или нет аутентификацию первой, второй стороны протокола и т.~д.;
         \item[(G2)] обеспечивает или нет аутентификацию сообщений;
         \item[(G3)] обеспечивает или нет защиту от повторов;
-        \item[{}] и т.п.
+        \item[{}] и т.~п.
     \end{itemize}
     \item Классификация по типам участников:
     \begin{itemize}
