добавлены доп. обозначения к протоколам и примеры их использования

--- a/protocols-writing-rules.tex
+++ b/protocols-writing-rules.tex
@@ -85,12 +85,23 @@
 Для сокращения описания и упрощения сравнения разных протоколов используют следующие соглашения об обозначениях передаваемых данных.
 
 \begin{itemize}
+    \item $A$, $B$, и т.~п. -- идентификаторы участников протокола: Алисы и Боба, соответственно.
 	\item $M$ (от \langen{message}) -- сообщение в исходном виде, открытый текст вне зависимости от кодировки. То есть под $M$ может пониматься и исходный текст в виде текста или, например, звука, либо уже некоторое число или массив бит, однозначно соответствующие этому сообщению.
 	\item $K$ (от \langen{key}) -- некоторый ключ. Без дополнительных уточнений обычно обозначает секретный сеансовый ключ.
 	\item $K_A$ -- общий секретный ключ между Алисой и Трентом (для симметричных криптосистем).
 	\item $K_A$ -- открытый ключ Алисы (для асимметричных криптосистем).
+	\item $L$ (от \langen{lifetime}) -- время жизни, например, сертификата.
 	\item $E_K \left( \dots \right)$ (от \langen{encrypt}) -- данные, зашифрованные на ключе $K$.
+	\item $E_A \left( \dots \right)$, $E_B \left( \dots \right)$ -- данные, зашифрованные на ключах Алисы и Боба, соответственно.
 	\item $S_K \left( \dots \right)$ (от \langen{sign}) -- данные \emph{и} соответствующая цифровая подпись на открытом ключе $K$.
 	\item $T_A$, $T_B$ (от \langen{timestamp}) -- метки времени от соответствующих участников.
 	\item $R_A$, $R_B$ (от \langen{random}) -- случайные числа, выбранные соответствующими участниками.
+\end{itemize}
+
+Примеры использования обозначений.
+
+\begin{itemize}
+	\item $E_{K_B}( M )$ или просто $E_B( M )$ -- сообщение $M$, зашифрованное ключом Боба $K_B$.
+    \item $S_A( R_A )$ -- случайное число $R_A$, сгенерированное Алисой и ей же подписанное. То есть в сообщении будет и случайное число (открытым текстом), и электронная подпись этого числа.
+    \item $S_T( A, K_A, T_T, L)$ -- идентификатор и ключ Алисы, метка времени и срок жизни данной записи, всё вместе подписанное открытым ключом доверенного центра (Трента). То есть фактически \emph{сертификат ключа}\index{сертификат!ключа} Алисы.
 \end{itemize}
