--- a/protocols-properties.tex
+++ b/protocols-properties.tex
@@ -119,18 +119,14 @@
         \hline
         SSH                    & × & × & × &   &   &   & × &   &   &  × &  × &    &    &    &    \\
         \hline
-        TLS                    & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        TLS, TLS 1.1, TLS 1.2  & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
         \hline
-        TLS-v1.1               & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
-        \hline
-        TLS-SRP                & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
-        \hline
-        TLS-sharedkeys         & × & × & × &   &   &   & × &   &   &  × &  × &    &  × &    &    \\
+        TLS 1.3                & × & × & × &   &   &   & × &   & × &  × &  × &    &  × &    &    \\
         \hline
         SET                    & × & × & × &   &   &   &   &   &   &    &    &    &  × &    &    \\
         \hline
     \end{tabular}
-    \caption{Примеры свойств безопасности протоколов~\cite{Cheremushkin:2009}.}
+    \caption{Примеры свойств безопасности протоколов (по \cite{Cheremushkin:2009} с дополнениями).}
     \label{tab:protocols-properties}
 \end{table}
 }
