Исправление в примере записи протокола

--- a/protocols-writing-rules.tex
+++ b/protocols-writing-rules.tex
@@ -57,7 +57,7 @@
 	\item[] $Alice \to \left\{ A = g^a \bmod p \right\} \to Bob$.
 	\item[(2)] Боб генерирует $b$.
 	\item[] Боб вычисляет $s = A^b \bmod p$.
-	\item[] $Bob \to \left\{ B = g^b \mod p \right\} \to Bob$.
+	\item[] $Bob \to \left\{ B = g^b \mod p \right\} \to Alice$.
 	\item[(3)] Алиса вычисляет $s = B^a \bmod p$.
 \end{enumerate}
 
