выделение главы про распространение ключей и удаление дублирования информации из новой главы (в связи с добавлением главы про протоколы в целом)

--- a/protocols-attacks.tex
+++ b/protocols-attacks.tex
@@ -1,4 +1,4 @@
-\section{Атаки на протоколы}
+\section{Атаки на протоколы}\label{section-protocols-attacks}
 \selectlanguage{russian}
 
 Защищённые свойства протоколов могут быть заявленными, когда о них заявляют сами авторы протокола (и, обычно, приводят различные аргументы в пользу выполнения данных функций), и подразумеваемыми, когда авторы некоторой системы рассчитывают на реализацию защищённых свойств некоторым протоколом.
