--- a/protocols-classification.tex
+++ b/protocols-classification.tex
@@ -1,4 +1,4 @@
-\section{Классификация протоколов}
+\section{Классификация протоколов}\label{section-protocols-classification}
 \selectlanguage{russian}
 
 Общепризнанная классификация защитных протоколов отсутствует. Однако можно выделить набор \emph{объективных и однозначных} признаков, классифицирующих протоколы.
