--- a/protocols.tex
+++ b/protocols.tex
@@ -11,7 +11,7 @@
 
 \input{protocols-attacks}
 
-\section{Протоколы распространения ключей}
+\chapter{Распространение ключей}\label{chapter-key-distribution-protocols}
 
 Задача распространения ключей является одной из множества задач построения надёжной сети общения многих абонентов. Задача состоит в получении в нужный момент времени двумя легальными абонентами сети секретного сессионного ключа шифрования (и аутентификации сообщений). Хорошим решением данной задачи будем считать такой протокол распространения ключей, который удовлетворяет следующим условиям.
 
@@ -30,7 +30,18 @@
     \caption{Варианты сетей без выделенного доверенного центра и с выделенным доверенным центром T\label{fig:key_distribution-networks}}
 \end{figure}
 
-Важным моментом при анализе решений данной задачи является то, что сессионные ключи, вырабатываемые в конкретный момент времени, являются менее надёжными, чем мастер-ключи, используемые для генерации сессионных. В частности, нужно предполагать, что хотя злоумышленник не может получить сессионный ключ во время общения абонентов, он может сделать это по прошествии некоторого времени (дни, недели, месяцы). И хотя знание этого сессионного ключа поможет злоумышленнику расшифровать старые сообщения, он не должен иметь возможность организовать новую сессию с использованием уже известного ему сессионного ключа.
+Если говорить о требованиях к данному классу протоколов с точки зрения свойств безопасности, то <<идеальный>> протокол распространения ключей должен реализовывать следующие цели:
+\begin{itemize}
+    \item[G1] аутентификация сторон протокола;
+    \item[G3] защита от повтора;
+    \item[G7] аутентификация ключа;
+    \item[G8] подтверждение владения [новым] ключом;
+    \item[G9] совершенная прямая секретность;
+    \item[G10] формирование новых ключей.
+    \item[G11] ограниченная защита от атак отказа в обслуживании.
+\end{itemize}
+
+Разумеется, <<идеальный>> протокол должен быть устойчивым ко всем известным атакам, в том числе рассмотренным в разделе~\ref{section-protocols-attacks}.
 
 \input{protocols-symmetric}
 
