--- a/protocols-symmetric.tex
+++ b/protocols-symmetric.tex
@@ -1,18 +1,7 @@
 \section{Симметричные протоколы}
 \selectlanguage{russian}
 
-К симметричным будем относить протоколы, которые используют примитивы только классической криптографии на секретных ключах. К таким относятся уже известные блочные шифры, криптографически стойкие генераторы псевдослучайных чисел (КСГПСЧ) и хэш-функции.
-
-При рассмотрении протоколов будем использовать следующие обозначения.
-\begin{itemize}
-	\item \textit{Alice}, \textit{Bob} -- легальные абоненты сети, для которых формируется общий сеансовый ключ. Алиса является инициатором.
-	\item \textit{Trent} -- доверенный центр сети.
-	\item $A$, $B$ -- некоторые идентификаторы легальных абонентов Алисы и Боба соответственно.
-	\item $E_A$, $E_B$ -- результат шифрования некоторого блока данных с использованием секретных ключей легальных абонентов сети Алисы и Боба соответственно. Такое шифрование могу осуществить либо сами легальные абоненты, либо доверенный центр, которому известны все секретные ключи.
-	\item $R_A$, $R_B$, $R_T$ -- случайные числа, генерируемые Алисой, Бобом и Трентом соответственно.
-	\item $T_A$, $T_B$, $T_T$ -- метки времени, генерируемые Алисой, Бобом и Трентом соответственно.
-	\item $K$ -- секретный сеансовый ключ, получение которого и является одной из целью протоколов.
-\end{itemize}
+Как отмечено ранее в разделе~\ref{section-protocols-classification} про классификацию протоколов, к симметричным будем относить те протоколы, которые используют примитивы только классической криптографии на секретных ключах. К ним относятся уже известные блочные шифры, криптографически стойкие генераторы псевдослучайных чисел (КСГПСЧ) и хэш-функции.
 
 \input{protocols-wide-mouth_frog}
 
