Добавлено пропущенное описание для атаки с параллельными сеансами

--- a/protocols-attacks.tex
+++ b/protocols-attacks.tex
@@ -26,6 +26,7 @@
 
     \item[PS] Атака с параллельными сеансами\\*
         \langen{parallel-session attack}
+    \item[{}] Класс атак, в котором злоумышленник инициирует несколько одновременных сеансов протокола с целью использования сообщений из одного сеанса в другом. Примером протокола, уязвимого к данному классу атак, является симметричный вариант протокола Нидхема~---~Шрёдера\index{протокол!Нидхема~---~Шрёдера}, рассмотренном в разделе~\ref{section-protocols-needham-schroeder}.
 
     \item[STS] Атака с известным разовым ключом\\*
         \langen{short-term secret attack}
