Перенёс главы по протоколам (пока без схем) в отдельную папку и сделал для них отдельный "главный" файл для ускорения сборки.

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -1,4 +1,6 @@
 \input{_settings}
+\addbibresource{bibliography.bib}
+\begin{document}
 \selectlanguage{russian}
 
 \title{Защита информации \\ Учебное пособие}
@@ -86,7 +88,7 @@
 
 \input{public-key}
 
-\input{protocols}
+\input{protocols/index}
 
 \input{secret-sharing}
 
