--- a/protocols/asymmetric.tex
+++ b/protocols/asymmetric.tex
@@ -45,17 +45,17 @@
     \item Сторона $B$ получает это сообщение, расшифровывает $\left( K, ~ A \right)$ и проверяет подпись $S_A(t_A, ~ K, ~ E_{K_B}(K, A))$.
 \end{enumerate}
 
-\input{protocols-diffie-hellman}
+\input{diffie-hellman}
 
 %\section{Протоколы с аутентификацией}
 
 \subsection{Односторонняя аутентификация}
 
-\input{protocols-el-gamal}
+\input{el-gamal}
 
-\input{protocols-mti}
+\input{mti}
 
-\input{protocols-sts}
+\input{sts}
 
 \input{girault_scheme}
 
