--- a/protocols/index.tex
+++ b/protocols/index.tex
@@ -1,15 +1,15 @@
 \chapter{Криптографические протоколы}\index{протокол!криптографический}\label{chapter-protocols}
 \selectlanguage{russian}
 
-\input{protocols-definitions}
+\input{definitions}
 
-\input{protocols-writing-rules}
+\input{writing-rules}
 
-\input{protocols-properties}
+\input{properties}
 
-\input{protocols-classification}
+\input{classification}
 
-\input{protocols-attacks}
+\input{attacks}
 
 \chapter{Распространение ключей}\label{chapter-key-distribution-protocols}
 
@@ -43,10 +43,10 @@
 
 Разумеется, <<идеальный>> протокол должен быть устойчивым ко всем известным атакам, в том числе рассмотренным в разделе~\ref{section-protocols-attacks}.
 
-\input{protocols-symmetric}
+\input{symmetric}
 
-\input{protocols-three-pass}
+\input{three-pass}
 
-\input{protocols-asymmetric}
+\input{asymmetric}
 
-\input{protocols-quantum}
+\input{quantum}
