--- a/protocols/symmetric.tex
+++ b/protocols/symmetric.tex
@@ -3,8 +3,8 @@
 
 Как отмечено ранее в разделе~\ref{section-protocols-classification} про классификацию протоколов, к симметричным будем относить те протоколы, которые используют примитивы только классической криптографии на секретных ключах. К ним относятся уже известные блочные шифры, криптографически стойкие генераторы псевдослучайных чисел (КСГПСЧ) и хэш-функции.
 
-\input{protocols-wide-mouth_frog}
+\input{wide-mouth_frog}
 
-\input{protocols-needham-schroeder}
+\input{needham-schroeder}
 
-\input{protocols-kerberos}
+\input{kerberos}
