Добавлено описание протокола Yahalom

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1420,3 +1420,16 @@
 	url		= {https://eprint.iacr.org/2015/812},
 	language	= {English},
 }
+
+@article{Zhou:Yu:Pan:Wang:2016,
+	author		= {Zhou, Ying and Yu, Lei and Pan, Shaoming and Wang, Zhibo},
+	journal		= {Revista de la Facultad de Ingeniería U.C.V.},
+	language	= {eng},
+	pages		= {134-142},
+	doi         = {10.21311/002.31.12.17},
+	title		= {An BAN Logic Analysis Method Based on Yahalom Protocol},
+	url         = {https://pdfs.semanticscholar.org/c700/fce9a29226076fa4bcb95e629a238016ca50.pdf},
+	volume		= {31},
+	issue       = {12},
+	year		= {2016},
+}
