Исправление tex warning

--- a/permutation_ciphers.tex
+++ b/permutation_ciphers.tex
@@ -1,7 +1,7 @@
 \subsubsection{Шифры перестановки}
 \selectlanguage{russian}
 
-Шифры \emph{перестановки} реализуются следующим образом. Берут открытый текст, например буквенный, и разделяют на блоки определённой длины m: $x_1, x_2, \dots, x_m, где x_i - i-й символ, i = 1, \dots , m$. Затем осуществляется перестановка позиций блока (вместе с символами). Перестановки могут быть однократные и многократные. Частный случай перестановки -- сдвиг. Приведём пример:
+Шифры \emph{перестановки} реализуются следующим образом. Берут открытый текст, например буквенный, и разделяют на блоки определённой длины m: $x_1, x_2, \dots, x_m$, где $x_i$ - i-й символ, $i = 1, \dots , m$. Затем осуществляется перестановка позиций блока (вместе с символами). Перестановки могут быть однократные и многократные. Частный случай перестановки -- сдвиг. Приведём пример:
 \begin{center}
     секрет $\xrightarrow{\text{сдвиг}}$ ретсек $\xrightarrow{\text{перестановка}}$ рскете.
 \end{center}
