Добавлены кросс-ссылки на Yahalom

--- a/protocols/attacks.tex
+++ b/protocols/attacks.tex
@@ -22,7 +22,7 @@
 
     \item[TF] Атака подмены типа\\*
         \langen{type flaw attack}
-    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протокол Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, протоколы Деннинга~---~Сако\index{протокол!Деннинга~---~Сако}, Yahalom\index{протокол!Yahalom} и Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}.
+    \item[{}] Класс атак, в котором злоумышленник используя переданное в легальном сеансе протокола сообщение конструирует новое, передавая его на другом проходе (раунде) протокола под видом сообщения другого типа (с другим предназначением). К таким атакам уязвимы, например, протоколы Wide-Mouth Frog\index{протокол!Wide-Mouth Frog} из раздела~\ref{section-protocols-wide-moth-frog}, Yahalom\index{протокол!Yahalom} из раздела~\ref{section-protocols-yahalom}, Деннинга~---~Сако\index{протокол!Деннинга~---~Сако}, и Отвей~---~Рииса\index{протокол!Отвей~---~Рииса}.
 
     \item[PS] Атака с параллельными сеансами\\*
         \langen{parallel-session attack}
