Описана "атака" на протокол Yahalom

--- a/protocols/yahalom.tex
+++ b/protocols/yahalom.tex
@@ -11,7 +11,7 @@
 \begin{itemize}
 	\item[(1)] $Alice \to \{ A, R_A \} \to Bob$
 	\item[(2)] $Bob \to \{ B, E_B( A, R_A, R_B ) \} \to Trent$
-	\item[(3)] Трент генерирует новый сессионый ключ $K$
+	\item[(3)] Трент генерирует новый сессионный ключ $K$
 	\item[{}] $Trent \to \{ E_A( B, K, R_A, R_B ), E_B(A, K) \} \to Alice$
 	\item[(4)] $Alice \to \{ E_B( A, K ), E_K( R_B ) \} \to Bob$
 \end{itemize}
@@ -23,6 +23,15 @@
     \item Аутентификация Боба перед Алисой происходит на 3-м проходе, когда Трент демонстрирует Алисе, что он получил случайное число $R_A$ именно от Боба.
 \end{itemize}
 
-Хотя Боб сумел доказать Тренту, что он является Бобом, а Трент, в свою очередь, продемонстрировал это Алисе, нужно отметить (\cite{Zhou:Yu:Pan:Wang:2016}), что в рамках протокола Боб никак не доказал, что он получил новый сессионный ключ и может им оперировать. Также отмечается, что на 3-м проходе Трент не включает никакие исходные случайные числа $R_A$ или $R_B$ в сообщение $E_B(A, K)$, что может привести к переиспользованию ключа злоумышленником в будущем. Однако на сегодняшний день никакие атаки на данный протокол не известны, несмотря на многочисленные попытки его формального анализа.
+Хотя Боб сумел доказать Тренту, что он является Бобом, а Трент, в свою очередь, продемонстрировал это Алисе, нужно отметить (\cite{Zhou:Yu:Pan:Wang:2016}), что в рамках протокола Боб никак не доказал, что он получил новый сессионный ключ и может им оперировать. Также на 3-м проходе Трент не включает случайное число $R_B$ в сообщение $E_B(A, K)$, что позволяет Алисе, действуя не из лучших побуждений, заставить Боба принять старый сессионный ключ.
+
+\begin{itemize}
+	\item[(1)] $Alice \to \{ A, R_A \} \to Bob$
+	\item[(2)] $Bob \to \{ B, E_B( A, R_A, R_B ) \} \to Trent$
+	\item[(3)] Трент генерирует новый сессионный ключ $K$
+	\item[{}] $Trent \to \{ E_A( B, K, R_A, R_B ), E_B(A, K) \} \to Alice$
+	\item[(4)] Алиса использует старый сессионный ключ $K^*$ и сообщение $E_B( A, K^* )$ из старого сеанса протокола
+	\item[{}] $Alice \to \{ E_B( A, K^* ), E_{K^*}( R_B ) \} \to Bob$
+\end{itemize}
 
 \index{протокол!Yahalom|)}
