Omura J.K. -> Omura, Jim K.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -500,7 +500,7 @@
 
 @misc{Massey:Omura:1986,
 	title		= {Method and apparatus for maintaining the privacy of digital messages conveyed by public transmission},
-	author		= {Massey, James Lee and Omura, J.K.},
+	author		= {Massey, James Lee and Omura, Jim K.},
 	url		= {https://www.google.com/patents/US4567600},
 	year		= {1986},
 	month		= {1},
